<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/upuserhead_texttop" />

        <TextView
            android:id="@+id/up_userhead_hint1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="18dp"
            android:text="@string/upuserhead_text1" />

        <TextView
            android:id="@+id/up_userhead_hint2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/up_userhead_hint1_tv"
            android:layout_below="@+id/up_userhead_hint1_tv"
            android:layout_marginTop="16dp"
            android:text="@string/upuserhead_text2" />

        <TextView
            android:id="@+id/up_userhead_hint3_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/up_userhead_hint2_tv"
            android:layout_below="@+id/up_userhead_hint2_tv"
            android:layout_marginTop="20dp"
            android:text="@string/upuserhead_text3" />
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:background="@color/black"/>
        <RelativeLayout 
            android:id="@+id/knew_bottom_up_userhead_rl"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            >
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upuserhead_knew"
                />
            </RelativeLayout>

        </RelativeLayout>
    

</RelativeLayout>
