<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_register_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/main_green" >
        <RelativeLayout 
            android:id="@+id/title_left_rl"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:layout_alignParentLeft="true">
        <ImageView
            android:id="@+id/title_left_imv"
            android:layout_width="11dp"
            android:layout_height="22dp"           
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            
            android:src="@drawable/main_name_btn_back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="81dp"
        android:src="@drawable/regist_imageview_intophoto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="65dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:src="@drawable/login_imaginview_phone" />

        <EditText
            android:id="@+id/phone_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:hint="@string/login_phone_hint"
            android:textColor="@color/login_text_hint"
            android:singleLine="true"
            android:inputType="phone"
            
            android:textColorHint="@color/login_text_hint"
            android:background="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/login_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:src="@drawable/login_imaginview_number" />

        <EditText
            android:id="@+id/password_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="18dp"
            android:hint="@string/login_password_hint"
            android:textColor="@color/login_text_hint"
            android:textColorHint="@color/login_text_hint"
            android:background="@null"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/login_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="34dp"
        android:layout_marginTop="1dp" >

        <TextView
            android:id="@+id/forget_psd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_alignParentRight="true"
            android:hint="@string/login_froget_psd"
            android:textColor="@color/login_text_hint"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"

        android:background="@drawable/register_btn_disabled"

        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/login_bottom_text"
                android:textColor="#b0b0b0"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/protocol_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_bottom_text2"
                android:textColor="@color/login_text2"
                android:textSize="11sp"
                 />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>