<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_abour_our_rl"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/mine_chird_top_bg" >

        <RelativeLayout
            android:id="@+id/back_abour_our_rl"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:background="@drawable/kongjianruoqu_bg"
            android:gravity="center" >

            <ImageView
                android:id="@+id/back_abour_our"
                android:layout_width="10dp"
                android:layout_height="17dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/main_name_btn_back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/abour_our_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/abour_our_title"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="48dp" >

        <TextView
            android:id="@+id/abour_our_welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@color/main_green"
            android:text="@string/abour_our_welcome" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/abour_our_welcome_tv"
            android:layout_centerVertical="true"
            android:layout_marginRight="13dp"
            android:scaleType="fitXY"
            android:src="@drawable/about_us_line_green_left" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:scaleType="fitXY"
            android:layout_toRightOf="@id/abour_our_welcome_tv"
            android:src="@drawable/about_us_line_green_right" />
    </RelativeLayout>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abour_our_topic1"/>

</LinearLayout>